--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -3,4 +3,48 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, 
+*, *::before, *:: {
+  box-sizing: inherit;
+} 
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Public Sans', sans-serif;
+  font-size: $font-med;
+  color: $grayishBlue;
+  font-weight: 300;
+  line-height: 1.3;
+}
+
+a, a:visited, a:hover {
+  text-decoration: none;
+}
+
+// Flexbox
+
+.flex {
+  display: flex;
+
+  &-jc-sb {
+    justify-content: space-between;
+  }
+
+  &-jc-c {
+    justify-content: center;
+  }
+
+  &-ai-c {
+    align-items: center;
+  }
+}
+
+// Buttons
+button, .button {
+  padding: 1rem 1.875rem;
+  background: linear-gradient(to right, $limeGreen, $brightCyan);
+  border: 0;
+  border-radius: 50px;
+  color: white;
+  font-weight: 400;
+}
