--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -1,4 +1,4 @@
-//Colors
+// Colors
 $darkBlue: hsl(233, 26%, 24%);
 $limeGreen: hsl(136, 65%, 51%);
 $brightCyan: hsl(192, 70%, 51%);
@@ -8,6 +8,7 @@ $veryLightGray: hsl(0, 0%, 98%);
 $white: hsl(0, 0%, 100%);
 
 // Font Sizes
-$font-sm: 0.875rem; //14px
-$font-med: 1.125rem; //18px
-
+$font-sm: 0.875rem; // 14px
+$font-med: 1.125rem; // 18px
+$font-lg: 1.25rem;
+$font-xlg: 3.25rem;
